--- a/TaxiMeterUI/MainWindow.xaml
+++ b/TaxiMeterUI/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TaxiMeterUI"
         mc:Ignorable="d"
-        Title="TaxiMeter" Height="450" Width="800">
-    <Grid>
+        Title="TaxiMeter" Height="405" Width="800">
+    <Grid x:Name="mainGrid">
         <Grid.RowDefinitions>
             <RowDefinition Height="200" />
             <RowDefinition Height="50"/>
-            <RowDefinition Height="200"/>
+            <RowDefinition Height="160" />  <!-- Grid.Row 2 -->
         </Grid.RowDefinitions>
         <!-- Grid.Row 0 -->
         <Border BorderBrush="Gray"  BorderThickness="1"/>
@@ -33,6 +33,8 @@
         <Button x:Name="btnTariff" Width="75" Height="40" HorizontalAlignment="Right" 
                 VerticalAlignment="Bottom" Margin="0,0,20,10" Content="Tariff"
                 FontSize="18" Click="btnTariff_Click" />
+        <Button x:Name="btnRideInfo" Width="100" Height="40" VerticalAlignment="Bottom"
+                Margin="0,0,0,10" Content="Ride Info" FontSize="18" Click="btnRideInfo_Click"/>
 
         <!-- Grid.Row 1-->
         <Button x:Name="btnStart" Grid.Row="1" Width="100" HorizontalAlignment="Left"
@@ -42,15 +44,14 @@
         <Button x:Name="btnEnd" Grid.Row="1" Width="100" HorizontalAlignment="Right"
             Margin="0,5,100,5" Content="End" FontSize="20" Click="btnEnd_Click" />
 
-        <!--Grid.Row 2-->
+        <!-- Grid.Row 2-->
         <Border BorderBrush="Gray" BorderThickness="1" Grid.Row="2" Margin="0,0,0,21" />
-        <TextBlock Grid.Row="2" Text="Last Ride Data:" FontSize="25" Margin="7,0,0,21"/>
+        <TextBlock Grid.Row="2" Text="Last Ride Data:" FontSize="24" Margin="7,0,0,21"/>
         <StackPanel Grid.Row="2" Margin="10,35,0,0">
             <TextBlock x:Name="txtStartTime" Text="Start time:" FontSize="18"/>
             <TextBlock x:Name="txtEndTime" Text="End time:" FontSize="18"/>
             <TextBlock x:Name="txtTotalPrice" Text="Total Price:" FontSize="18"/>
             <TextBlock x:Name="txtDistance" Text="Distance travelled:" FontSize="18"/>
         </StackPanel>
-
     </Grid>
 </Window>
